# Sargerust

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: rust.yml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/github/sargerust/: MainActivity.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
docs/: AssetsDAG.drawio
framexml/: Cargo.toml
framexml-parser/: Cargo.toml
framexml-parser/src/: anchor.rs  attributes.rs  dimensions.rs  layers.rs  lib.rs  scripts.rs  toc.rs  typedefs.rs
framexml-parser/tests/: parsing.rs  toc.rs
framexml/lua/: stubs.lua
framexml/src/: addon.rs  frame.rs  layout.rs  lib.rs  scripts.rs
framexml/tests/: frame.rs  scripts.rs
mpq-rust/: Cargo.toml  README.md
mpq-rust/src/: archive.rs  chain.rs  crypt.rs  lib.rs
sargerust-files/: Cargo.toml
sargerust-files/sargerust-files-derive-parseable/: Cargo.toml
sargerust-files/sargerust-files-derive-parseable/src/: lib.rs
sargerust-files/src/: lib.rs
sargerust-files/src/adt/: reader.rs  tests.rs  types.rs
sargerust-files/src/common/: mod.rs  reader.rs  types.rs
sargerust-files/src/m2/: mod.rs  reader.rs  tests.rs  types.rs
sargerust-files/src/wdt/: reader.rs  tests.rs  types.rs
sargerust-files/src/wmo/: reader.rs  tests.rs  types.rs
shaders/src/: terrain-depth.wgsl  terrain-opaque.wgsl  units-depth.wgsl  units-opaque.wgsl
shaders/src/ssao/: ssao-blur.wgsl  ssao-main.wgsl
src/: android.rs  main.rs
src/audio/: audio_playback_manager.rs  mod.rs  zone_music_manager.rs
src/demos/: mod.rs
src/entity/: entity_tracker.rs  mod.rs
src/entity/components/: mod.rs  objects.rs  render.rs  rendering.rs  units.rs
src/entity/systems/: display_id_resolver_system.rs  mod.rs  rendering_system.rs  spline_walker_system.rs  systems.rs
src/game/: application.rs  game_state.rs  game_time.rs  map_light_settings_provider.rs  map_manager.rs  mod.rs  packet_handlers.rs
src/io/: mod.rs
src/io/common/: loader.rs
src/io/mpq/: loader.rs  mod.rs
src/networking/: application.rs  auth.rs  mod.rs  movement_tracker.rs  utils.rs  world.rs
src/physics/: character_movement_information.rs  collider_factory.rs  mod.rs  physics_simulator.rs  physics_state.rs  terrain_tile_colliders.rs
src/rendering/: application.rs  mod.rs  utils.rs
src/rendering/asset_graph/: m2_generator.rs  mod.rs  resolver.rs
src/rendering/asset_graph/nodes/: adt_node.rs  mod.rs
src/rendering/common/: coordinate_systems.rs  highlevel_types.rs  mesh_merger.rs  mod.rs  special_types.rs  types.rs
src/rendering/importer/: adt_importer.rs  m2_importer.rs  mod.rs  wmo_importer.rs
src/rendering/loader/: blp_loader.rs  m2_loader.rs  mod.rs  wmo_loader.rs
src/rendering/rend3_backend/: gpu_loaders.rs  mod.rs
src/rendering/rend3_backend/material/: mod.rs
src/rendering/rend3_backend/material/ssao/: mod.rs
src/rendering/rend3_backend/material/terrain/: mod.rs  terrain_material.rs  terrain_routine.rs
src/rendering/rend3_backend/material/units/: mod.rs  units_material.rs  units_routine.rs
src/rendering/sky/: mod.rs  sunlight.rs
src/settings/: mod.rs
src/util/: mod.rs  weak_dashmap.rs
