[package]
name = "sargerust"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = [
    "sargerust-files",
    "sargerust-files/sargerust-files-derive-parseable",
    "mpq-rust"
]

# Force release builds for rapier
[profile.dev.package.rapier3d]
opt-level = 3

# Force release builds for glam
[profile.dev.package.glam]
opt-level = 3

[dependencies]
# Logging, but getting rid of the regex feature/dependency for regex filters.
env_logger = { version = "0.11.3", default-features = false, features = ["auto-color", "humantime"] }
log = "0.4.21"

# Error handling
anyhow = "1.0.86"

# asset parsing
mpq = { path = "mpq-rust" } # mpq = "0.8"
image-blp = "1"
sargerust-files = { path = "sargerust-files", features = ["wotlk"] }

# For the Rendering/Game Engine
# Linear algebra library
glam = { version = "0.24.2", features = ["approx"] }
# Renderer core
rend3 = { git = "https://github.com/BVE-Reborn/rend3" }
# Programmable render list that dictates how the scene renders
rend3-routine = { git = "https://github.com/BVE-Reborn/rend3" }
# Framework that deals with the event loop, setting up the renderer, and platform differences.
rend3-framework = { git = "https://github.com/BVE-Reborn/rend3" }
# Provides `block_on` to wait for futures from sync code
pollster = "0.3"
# windowing. TODO: Upgrade to 0.29 for new keyboard handling
winit = "0.28"

# collect_vec and other niceities
itertools = "0.13.0"
quick_cache = "0.6.9"

# Multiplayer/Networking
# "srp-fast-math" is not supported with the MSVC target. Also the version needs to match the version defined in the messages
wow_srp = { version = "0.7.0", default-features = false, features = ["tbc-header", "wrath-header", "srp-default-math"] }
wow_login_messages = { git = "https://github.com/gtker/wow_messages", features = ["sync"] }
wow_world_messages = { git = "https://github.com/gtker/wow_messages", features = ["sync", "wrath", "print-testcase"] }

# async
tokio = { version = "1.33.0", features = ["full"] }

# replacing RwLock<HashMap<_>>, especially in the resolvers, that had held a global hashmap lock when inserting, massively impacting parallelity
dashmap = "6.1.0"

# Physics Engine
rapier3d = { version = "0.22.0", features = ["simd-nightly"] }
nalgebra = { version = "0.33.1", features = ["convert-glam024"] } # Match version with rapier3d.
