[package]
name = "sargerust"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = [
    "sargerust-files",
    "sargerust-files/sargerust-files-derive-parseable",
    "mpq-rust"
]

# Force release builds for rapier
[profile.dev.package.rapier3d]
opt-level = 3
codegen-units = 1

# Force release builds for glam
[profile.dev.package.glam]
opt-level = 3
codegen-units = 1

[profile.dev.package.parry3d]
opt-level = 3
codegen-units = 1

[profile.release]
lto = "fat"
debug = 1
codegen-units = 1

[build-dependencies]
anyhow = "1.0.95"
vergen-gitcl = { version = "1.0.2", features = [], default-features = false }

[dependencies]
# Logging, but getting rid of the regex feature/dependency for regex filters.
env_logger = { version = "0.11.3", default-features = false, features = ["auto-color", "humantime"] }
log = "0.4.21"

# Error handling
anyhow = "1.0.95"

# asset parsing
mpq = { path = "mpq-rust" } # mpq = "0.8"
image-blp = "1"
sargerust-files = { path = "sargerust-files", features = ["wotlk"] }

# To Track the entities/objects (i.e. NPCs, Mobs, Players)
hecs = "0.10.5"

# For the Rendering/Game Engine
# Linear algebra library
glam = { version = "0.25.0", features = ["approx"] }
# Renderer core
rend3 = { git = "https://github.com/MeFisto94/rend3-hp/", branch = "feature/custom-materials" }
# Programmable render list that dictates how the scene renders
rend3-routine = { git = "https://github.com/MeFisto94/rend3-hp/", branch = "feature/custom-materials" }
# For the custom materials
encase = "0.7.0"
encase_derive = "0.7.0"
encase_derive_impl = "0.7.0"
serde = { version = "1.0.193", features = ["derive"] }
wgpu = "0.20" # Needs to be in sync with rend3, used for custom materials.
rust-embed = "8.1.0"

# Framework that deals with the event loop, setting up the renderer, and platform differences.
rend3-framework = { git = "https://github.com/MeFisto94/rend3-hp/", branch = "feature/custom-materials" }
# Provides `block_on` to wait for futures from sync code
pollster = "0.3"
# windowing. TODO: Upgrade to 0.29 for new keyboard handling
# https://github.com/BVE-Reborn/rend3/commit/d7869b838ff6b6283141203ec6b8bddffb3b8eea and following seem to fix examples for that.
winit = "0.29"

# collect_vec and other niceities
itertools = "0.13.0"
quick_cache = "0.6.9"

# Multiplayer/Networking
# "srp-fast-math" is not supported with the MSVC target. Also the version needs to match the version defined in the messages
wow_srp = { version = "0.7.0", default-features = false, features = ["tbc-header", "wrath-header", "srp-default-math"] }
wow_login_messages = { git = "https://github.com/gtker/wow_messages", features = ["sync"], rev = "d30a0aea8213e963534c638c8166cae0d36e9f9f" }
wow_world_messages = { git = "https://github.com/gtker/wow_messages", features = ["sync", "wrath", "print-testcase"], rev = "d30a0aea8213e963534c638c8166cae0d36e9f9f" }

# async
tokio = { version = "1.33.0", features = ["full"] }

# replacing RwLock<HashMap<_>>, especially in the resolvers, that had held a global hashmap lock when inserting, massively impacting parallelity
dashmap = "6.1.0"

# Physics Engine
rapier3d = { version = "0.23.0", features = ["simd-nightly"] }
# Caution: The convert-glam feature needs to match the glam version, otherwise it will cause duplicate dependencies in the tree
nalgebra = { version = "0.33.2", features = ["convert-glam025"] } # Match version with rapier3d.
