[package]
authors = [ "MeFisto94" ]
name = "framexml-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.189"
serde_derive = "1.0.189"
quick-xml = { version = "0.30.0", features = ["serialize"] }