[package]
authors = ["MeFisto94"]
name = "framexml-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.219"
serde_derive = "1.0.219"
quick-xml = { version = "0.37.4", features = ["serialize"] }